--- a/Forge Keeper Text RPG/Forge Keeper Text RPG.vcxproj
+++ b/Forge Keeper Text RPG/Forge Keeper Text RPG.vcxproj
@@ -129,21 +129,23 @@
   <ItemGroup>
     <ClCompile Include="Forge Keeper Text RPG.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="HealingItem.cpp" />
     <ClCompile Include="Item.cpp" />
-    <ClCompile Include="Location.cpp" />
     <ClCompile Include="MiniGames.cpp" />
-    <ClCompile Include="Npc.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Request.cpp" />
+    <ClCompile Include="RequestBoard.cpp" />
     <ClCompile Include="Story.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="HealingItem.h" />
     <ClInclude Include="Item.h" />
-    <ClInclude Include="Location.h" />
     <ClInclude Include="MiniGames.h" />
-    <ClInclude Include="Npc.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Request.h" />
+    <ClInclude Include="RequestBoard.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Story.h" />
     <ClInclude Include="Weapon.h" />
