--- a/Forge Keeper Text RPG/Forge Keeper Text RPG.vcxproj
+++ b/Forge Keeper Text RPG/Forge Keeper Text RPG.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -135,6 +135,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Request.cpp" />
     <ClCompile Include="RequestBoard.cpp" />
+    <ClCompile Include="Recipes.cpp" />
     <ClCompile Include="Story.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
@@ -144,6 +145,7 @@
     <ClInclude Include="Item.h" />
     <ClInclude Include="MiniGames.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Recipes.h" />
     <ClInclude Include="Request.h" />
     <ClInclude Include="RequestBoard.h" />
     <ClInclude Include="resource.h" />
