forging system, knight quest

--- a/Forge Keeper Text RPG/Forge Keeper Text RPG.vcxproj.filters
+++ b/Forge Keeper Text RPG/Forge Keeper Text RPG.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="HealingItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Recipes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HealingItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Recipes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
